--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@mongez/monpulse",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "Powerful Mongodb Database Manager for Node Js",
     "main": "src/index.ts",
     "dependencies": {
@@ -10,6 +10,7 @@
         "@mongez/supportive-is": "^1.0.12",
         "@mongez/time-wizard": "^1.0.6",
         "dayjs": "^1.11.9",
+        "pluralize": "^8.0.0",
         "mongodb": "^5.7.0"
     },
     "scripts": {
@@ -29,12 +30,12 @@
         "console-table-printer": "^2.11.2",
         "commander": "^11.0.0",
         "chalk": "^4",
-        "eslint": "^8.44.0",
-        "eslint-config-prettier": "^8.8.0",
+        "eslint": "^8.46.0",
+        "eslint-config-prettier": "^8.9.0",
         "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-unused-imports": "^3.0.0",
-        "jest": "^29.6.1",
-        "npm-check-updates": "^16.10.15",
+        "jest": "^29.6.2",
+        "npm-check-updates": "^16.10.17",
         "prettier": "^3.0.0",
         "prettier-plugin-organize-imports": "^3.2.3",
         "ts-jest": "^29.1.1",
